<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth.SignInFragment">

    <TextView
        style="@style/error_text_color"
        android:id="@+id/errorNeedSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sigInItemsContainer"
        android:layout_margin="15dp"
        android:paddingHorizontal="15dp"
        android:text="@string/error_need_signup_txt"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sigInItemsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/signInLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:importantForAutofill="no"
            android:imeOptions="actionGo"
            android:inputType="text" />

        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <TextView

            style="@style/error_text_color"
            android:id="@+id/errorNeedNotEmptyFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingBottom="3dp"
            android:text="@string/error_need_not_empty_fields_txt"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_btn_text" />

        <Button
            android:id="@+id/moveToSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_btn_text" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>