<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/getLoanItemContainer"
    tools:context=".ui.fragments.loan.GetLoanFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/get_loan_card_theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="20dp">

            <TextView
                android:id="@+id/maxAmountTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:text="@string/get_loan_max_amount_txt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/loanMaxAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/maxAmountTxt"
                app:layout_constraintStart_toEndOf="@id/maxAmountTxt"
                tools:text="30000"/>

            <TextView
                android:id="@+id/rubMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rub_mark"
                android:layout_marginStart="2dp"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@id/loanMaxAmount"
                app:layout_constraintBaseline_toBaselineOf="@id/loanMaxAmount"/>

            <TextView
                android:id="@+id/periodTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:text="@string/get_loan_period_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/maxAmountTxt"
                app:layout_constraintEnd_toStartOf="@id/guideline"/>

            <TextView
                android:id="@+id/loanPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/periodTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/dayMark"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="63"/>

            <TextView
                android:id="@+id/dayMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_mark"
                android:layout_marginStart="2dp"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@id/loanPeriod"
                app:layout_constraintBaseline_toBaselineOf="@id/loanPeriod"
                app:layout_constraintEnd_toEndOf="@id/guideline"/>

            <TextView
                android:id="@+id/percentTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:text="@string/get_loan_percent_txt"
                app:layout_constraintTop_toBottomOf="@id/maxAmountTxt"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/loanPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/percentTxt"
                app:layout_constraintEnd_toStartOf="@id/percentMark"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="10,3"/>

            <TextView
                android:id="@+id/percentMark"
                android:text="@string/percent_mark"
                android:layout_width="wrap_content"
                android:layout_marginStart="2dp"
                android:textSize="22sp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/loanPercent"
                app:layout_constraintBaseline_toBaselineOf="@id/loanPercent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardView"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loanAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:hint="@string/get_loan_hint_amount"
            android:inputType="number" />

        <TextView
            style="@style/error_text_color"
            android:id="@+id/errorRightAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text="@string/get_loan_error_right_amount_txt"
            android:textSize="13sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/loanUserFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:hint="@string/get_loan_hint_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/loanUserLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:hint="@string/get_loan_hint_last_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/loanUserPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/get_loan_hint_phone"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            android:inputType="number" />

        <TextView
            style="@style/error_text_color"
            android:id="@+id/errorNotEmptyFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text="@string/get_loan_error_need_not_empty_fields"
            android:textSize="13sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/getLoanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/get_loan_btn_txt" />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        style="@style/error_text_color"
        android:id="@+id/errorGetLoanFr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingHorizontal="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="gone"
        tools:text="Some error loooooooooong text for testiiiiiing"
        tools:visibility="visible"
        android:layout_above="@id/progressBar"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_centerInParent="true"/>

</RelativeLayout>
