<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/itemLoanState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Одобренно" />

    <TextView
        android:id="@+id/amountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/all_loans_amount_txt"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemLoanState" />

    <TextView
        android:id="@+id/itemAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountTxt"
        tools:text="15000" />

    <TextView
        android:id="@+id/percentTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/all_loans_percent_txt"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/to_loan_description_image"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/itemLoanState" />

    <TextView
        android:id="@+id/itemPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/percentTxt"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/percentTxt"
        tools:text="10.8" />

    <TextView
        android:id="@+id/percentMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/percent_mark"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/itemPercent"
        app:layout_constraintTop_toBottomOf="@id/percentTxt" />

    <ImageView
        android:id="@+id/to_loan_description_image"
        android:src="@drawable/ic_to_loan_details"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/all_loans_image_view_description" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>

